fix invalid-feedback not showing

--- a/front-end/src/components/settingsComponent/style.css
+++ b/front-end/src/components/settingsComponent/style.css
@@ -48,3 +48,5 @@
 }
 
 .editButton span { margin-left: 5px; }
+
+.invalid-feedback { display: block; }
